/**
 * generated by Xtext 2.42.0
 */
package pt.isep.enorm.refdsl.refDsl.impl;

import org.eclipse.emf.common.notify.Notification;

import org.eclipse.emf.ecore.EClass;

import org.eclipse.emf.ecore.impl.ENotificationImpl;
import org.eclipse.emf.ecore.impl.MinimalEObjectImpl;

import pt.isep.enorm.refdsl.refDsl.AutomationRule;
import pt.isep.enorm.refdsl.refDsl.RefDslPackage;

/**
 * <!-- begin-user-doc -->
 * An implementation of the model object '<em><b>Automation Rule</b></em>'.
 * <!-- end-user-doc -->
 * <p>
 * The following features are implemented:
 * </p>
 * <ul>
 *   <li>{@link pt.isep.enorm.refdsl.refDsl.impl.AutomationRuleImpl#getName <em>Name</em>}</li>
 *   <li>{@link pt.isep.enorm.refdsl.refDsl.impl.AutomationRuleImpl#getTrigger <em>Trigger</em>}</li>
 *   <li>{@link pt.isep.enorm.refdsl.refDsl.impl.AutomationRuleImpl#getCondition <em>Condition</em>}</li>
 *   <li>{@link pt.isep.enorm.refdsl.refDsl.impl.AutomationRuleImpl#getActionDescription <em>Action Description</em>}</li>
 * </ul>
 *
 * @generated
 */
public class AutomationRuleImpl extends MinimalEObjectImpl.Container implements AutomationRule
{
  /**
   * The default value of the '{@link #getName() <em>Name</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getName()
   * @generated
   * @ordered
   */
  protected static final String NAME_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getName() <em>Name</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getName()
   * @generated
   * @ordered
   */
  protected String name = NAME_EDEFAULT;

  /**
   * The default value of the '{@link #getTrigger() <em>Trigger</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getTrigger()
   * @generated
   * @ordered
   */
  protected static final String TRIGGER_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getTrigger() <em>Trigger</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getTrigger()
   * @generated
   * @ordered
   */
  protected String trigger = TRIGGER_EDEFAULT;

  /**
   * The default value of the '{@link #getCondition() <em>Condition</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getCondition()
   * @generated
   * @ordered
   */
  protected static final String CONDITION_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getCondition() <em>Condition</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getCondition()
   * @generated
   * @ordered
   */
  protected String condition = CONDITION_EDEFAULT;

  /**
   * The default value of the '{@link #getActionDescription() <em>Action Description</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getActionDescription()
   * @generated
   * @ordered
   */
  protected static final String ACTION_DESCRIPTION_EDEFAULT = null;

  /**
   * The cached value of the '{@link #getActionDescription() <em>Action Description</em>}' attribute.
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @see #getActionDescription()
   * @generated
   * @ordered
   */
  protected String actionDescription = ACTION_DESCRIPTION_EDEFAULT;

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  protected AutomationRuleImpl()
  {
    super();
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  protected EClass eStaticClass()
  {
    return RefDslPackage.Literals.AUTOMATION_RULE;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getName()
  {
    return name;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setName(String newName)
  {
    String oldName = name;
    name = newName;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, RefDslPackage.AUTOMATION_RULE__NAME, oldName, name));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getTrigger()
  {
    return trigger;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setTrigger(String newTrigger)
  {
    String oldTrigger = trigger;
    trigger = newTrigger;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, RefDslPackage.AUTOMATION_RULE__TRIGGER, oldTrigger, trigger));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getCondition()
  {
    return condition;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setCondition(String newCondition)
  {
    String oldCondition = condition;
    condition = newCondition;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, RefDslPackage.AUTOMATION_RULE__CONDITION, oldCondition, condition));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String getActionDescription()
  {
    return actionDescription;
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void setActionDescription(String newActionDescription)
  {
    String oldActionDescription = actionDescription;
    actionDescription = newActionDescription;
    if (eNotificationRequired())
      eNotify(new ENotificationImpl(this, Notification.SET, RefDslPackage.AUTOMATION_RULE__ACTION_DESCRIPTION, oldActionDescription, actionDescription));
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public Object eGet(int featureID, boolean resolve, boolean coreType)
  {
    switch (featureID)
    {
      case RefDslPackage.AUTOMATION_RULE__NAME:
        return getName();
      case RefDslPackage.AUTOMATION_RULE__TRIGGER:
        return getTrigger();
      case RefDslPackage.AUTOMATION_RULE__CONDITION:
        return getCondition();
      case RefDslPackage.AUTOMATION_RULE__ACTION_DESCRIPTION:
        return getActionDescription();
    }
    return super.eGet(featureID, resolve, coreType);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void eSet(int featureID, Object newValue)
  {
    switch (featureID)
    {
      case RefDslPackage.AUTOMATION_RULE__NAME:
        setName((String)newValue);
        return;
      case RefDslPackage.AUTOMATION_RULE__TRIGGER:
        setTrigger((String)newValue);
        return;
      case RefDslPackage.AUTOMATION_RULE__CONDITION:
        setCondition((String)newValue);
        return;
      case RefDslPackage.AUTOMATION_RULE__ACTION_DESCRIPTION:
        setActionDescription((String)newValue);
        return;
    }
    super.eSet(featureID, newValue);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public void eUnset(int featureID)
  {
    switch (featureID)
    {
      case RefDslPackage.AUTOMATION_RULE__NAME:
        setName(NAME_EDEFAULT);
        return;
      case RefDslPackage.AUTOMATION_RULE__TRIGGER:
        setTrigger(TRIGGER_EDEFAULT);
        return;
      case RefDslPackage.AUTOMATION_RULE__CONDITION:
        setCondition(CONDITION_EDEFAULT);
        return;
      case RefDslPackage.AUTOMATION_RULE__ACTION_DESCRIPTION:
        setActionDescription(ACTION_DESCRIPTION_EDEFAULT);
        return;
    }
    super.eUnset(featureID);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public boolean eIsSet(int featureID)
  {
    switch (featureID)
    {
      case RefDslPackage.AUTOMATION_RULE__NAME:
        return NAME_EDEFAULT == null ? name != null : !NAME_EDEFAULT.equals(name);
      case RefDslPackage.AUTOMATION_RULE__TRIGGER:
        return TRIGGER_EDEFAULT == null ? trigger != null : !TRIGGER_EDEFAULT.equals(trigger);
      case RefDslPackage.AUTOMATION_RULE__CONDITION:
        return CONDITION_EDEFAULT == null ? condition != null : !CONDITION_EDEFAULT.equals(condition);
      case RefDslPackage.AUTOMATION_RULE__ACTION_DESCRIPTION:
        return ACTION_DESCRIPTION_EDEFAULT == null ? actionDescription != null : !ACTION_DESCRIPTION_EDEFAULT.equals(actionDescription);
    }
    return super.eIsSet(featureID);
  }

  /**
   * <!-- begin-user-doc -->
   * <!-- end-user-doc -->
   * @generated
   */
  @Override
  public String toString()
  {
    if (eIsProxy()) return super.toString();

    StringBuilder result = new StringBuilder(super.toString());
    result.append(" (name: ");
    result.append(name);
    result.append(", trigger: ");
    result.append(trigger);
    result.append(", condition: ");
    result.append(condition);
    result.append(", actionDescription: ");
    result.append(actionDescription);
    result.append(')');
    return result.toString();
  }

} //AutomationRuleImpl
